--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-
 .section {
     padding-top: 40%;
     padding-bottom: 40px;
 }
+
 .main-heading {
-    color: blue
+    color: blue;
 }
 
 .underline {
@@ -12,9 +12,9 @@
     width: 4rem;
     background-color: blue;
     margin-top: 10px;
-    margin-bottom:10px ;
+    margin-bottom: 10px;
 }
-.bg-c-light
-{
+
+.bg-c-light {
     background-color: grey;
 }
